Anu uurchil ingeedeeen

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 </div>
 <div class="speech-bubble speech-bubble1" id="bubble1"></div>
 
-<button id="letsGoBtn" style="display: none;"><a href="invitation.html">Go !!!</a></button>
+<button id="letsGoBtn" style="display: none;" onclick="window.location.href='invitation.html'">Go !!!</button>
 
 <script src="script.js"></script>
 </body>
